Fix Safari overflow bug

--- a/src/components/c-checkbox/c-checkbox.scss
+++ b/src/components/c-checkbox/c-checkbox.scss
@@ -12,6 +12,7 @@
   color: var(--c-color);
   overflow: hidden;
   position: relative;
+  transform: translateZ(0); // Safari overflow fix
 
   * {
     pointer-events: none;
